Fix sidebar: explicit ordered items, flatten structure; re-split 4 modules with fence-aware splitter; delete dead files and source markdown